--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-cssmin": "^0.1.6",
     "gulp-livereload": "^3.8.0",
+    "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.1.0",
     "gulp-webserver": "^0.9.0",
     "opn": "^1.0.1"
